openshift/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kibana

  template:
    metadata:
      labels:
        app: kibana

    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:9.1.4

          ports:
            - containerPort: 5601

          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: 1Gi
              cpu: "1"
