openshift/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vietnam-logistics

spec:
  selector:
    deployment: vietnam-logistics

  ports:
    - name: http
      port: 8080
      targetPort: 8080
