openshift/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana

spec:
  selector:
    app: kibana

  ports:
    - name: http
      port: 5601
      targetPort: 5601
