openshift/app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vietnam-logistics

spec:
  to:
    kind: Service
    name: vietnam-logistics

  port:
    targetPort: http
