openshift/kibana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kibana

spec:
  to:
    kind: Service
    name: kibana

  port:
    targetPort: http
